fix: ShibIntIdP3: use Boolean.valueOf() instead of deprecated Boolean() constructor